--- a/UASignerWpfApp/UASignerWpfApp.csproj
+++ b/UASignerWpfApp/UASignerWpfApp.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Providers\ModelTimestampServerProvider.cs" />
     <Compile Include="Service\DummyService.cs" />
     <Compile Include="Service\IService.cs" />
+    <Compile Include="Service\IServiceController.cs" />
     <Compile Include="Service\Service.cs" />
     <Compile Include="Service\Configuration\ServiceConfiguration.cs" />
     <Compile Include="Service\ServiceMessage.cs" />
